--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=demo
-# Configure the context path (base path) for the application
-server.servlet.context-path=/demo
+spring.application.name=${SPRING_APPLICATION_NAME:demo}
+server.servlet.context-path=${SERVER_SERVLET_CONTEXT_PATH:/demo}
+server.port=${SERVER_PORT:8080}
